[tool.poetry]
name = "ix"
version = "0.1.0"
description = ""
authors = ["arnos-stuff <bcda0276@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.scripts]
ix = "ix.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
